--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon premier site web</title>
-</head>
-<body>
-    <h1>Bonjour</h1> 
+  </head>
+  <body>
+    <h1>Bonjour</h1>
     <h2>Bonjour</h2>
     <h3>Bonjour</h3>
     <h4>Bonjour</h4>
     <h5>Bonjour</h5>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure dolorum, molestiae iusto doloremque ad perferendis ipsam aliquid tenetur dolor eaque maiores ullam, illum dignissimos velit. Consequuntur, dignissimos. Aspernatur ipsum, neque consectetur quos eligendi mollitia magni ipsa sunt laboriosam porro in cumque temporibus sint explicabo ipsam voluptatum quibusdam ut id! Tempore animi eligendi doloremque, aspernatur eveniet exercitationem dignissimos eum, error vero voluptates minus! Dicta dolorum explicabo enim est odit pariatur, sunt hic eveniet maxime distinctio assumenda voluptates sapiente quisquam illum debitis quae? Dicta neque, qui eveniet possimus aut in veniam iure! Facilis laborum excepturi natus non voluptatibus eum. Aut, eum nisi?</p>
-
-    <ul>
-        <li>Banane</li>
-        <li>fraise</li>
-        <li>Avocat</li>
-        <li>Carotte</li>
-    </ul>
-
-    <ol>
-        <li>Banane</li>
-        <li>fraise</li>
-        <li>Avocat</li>
-        <li>Carotte</li>
-        <ul>
-            <li>Banane</li>
-            <li>fraise</li>
-            <li>Avocat</li>
-            <li>Carotte</li>
-            <ol>
-                <li>Banane</li>
-                <li><a href="https://nonoweb17.fr">Mon site web</a></li>
-                <li>fraise</li>
-                <li>Avocat</li>
-                <li>Carotte</li>
-        </ul>
-        
-    </ol>
-</body>
+    <img src="ballon-de-foot.png" alt="ballon" width="200px" />
+    <br />
+    <form>
+      <label> Email : </label>
+      <input type="text" placeholder="Email" name="email" />
+      <br />
+      <label> Password : </label>
+      <input type="password" placeholder="Password" name="Password" />
+      <br />
+      <label> Message :</label>
+      <textarea
+        type="text"
+        name="desc"
+        placeholder="Entrer votre message"
+        rows="8"
+        cols="33"
+      ></textarea>
+      <br />
+      <label>Oui</label>
+      <input type="checkbox" />
+      <label>Non</label>
+      <input type="checkbox" />
+      <br />
+      <select>
+        <option>fruit</option>
+        <option>Fraise</option>
+        <option>Peche</option>
+        <option>Orange</option>
+      </select>
+      <br />
+      <button type="submit">Envoyer</button>
+    </form>
+    <table>
+      <tr>
+        <th>Mois</th>
+        <th>Date</th>
+      </tr>
+      <tr>
+        <td>Janvier</td>
+        <td>10.01.2022</td>
+      </tr>
+      <tr>
+        <td>Fevrier</td>
+        <td>10.02.2022</td>
+      </tr>
+    </table>
+  </body>
 </html>
